online_judge/compilerApiApp/static/all_submissions/110/error.txt
  File "/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/compilerApiApp/all_submissions/110/codefile_1.py", line 3
    
                ^
SyntaxError: unexpected EOF while parsing
Command exited with non-zero status 1
	Command being timed: "python3 /media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/compilerApiApp/all_submissions/110/codefile_1.py"
	User time (seconds): 0.15
	System time (seconds): 0.01
	Percent of CPU this job got: 92%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.18
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 23976
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 1
	Minor (reclaiming a frame) page faults: 3387
	Voluntary context switches: 636
	Involuntary context switches: 17
	Swaps: 0
	File system inputs: 8
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
